# blockchain_diplome

./: .gitignore  README.md  cli_diplomas.py  pyproject.toml
blockchain/: block.py  blockchain.py  dilithium.py
data_manager/: chiffrement.py  compression.py  fragmentation.py
tests/: test_blockchain.py  test_data_manager.py  test_dilithium.py
